# rustServer

./: .travis.yml  Cargo.toml  Makefile  Makefile.release  README.md  ci-install.sh  post-install.sh  pre-install.go  pre-install.sh  require.md
mcsql-sys/: Cargo.toml  build.rs  lib.rs
mcsql-sys/mcsql/: Makefile  define.h  mcmanager.c  mcmanager.h  mcquery.c  mcquery.h  mcsql.c  mcsql.h  mcsqlmapper.c  mcsqlmapper.h
mrj/: Cargo.toml
mrj-sys/: Cargo.toml  README.md  build.rs  lib.rs
mrj-sys/mrj/: Makefile  define.h  mrj.c  mrj.h  mrjlocalvar.c  mrjlocalvar.h  mrjlocvar.c  mrjlocvar.h  mrjnv.c  mrjnv.h  mrjplc.c  mrjplc.h  mrjresource.c  mrjresource.h  mrjsysvar.c  mrjsysvar.h
src/: main.rs
src/api/: mod.rs
src/api/apiv1/: mod.rs
src/middlewares/: mod.rs
src/middlewares/accesslog/: mod.rs
src/rlog/: mod.rs
src/rpc/: mcsql.rs  mod.rs  mrj.rs  ws.rs
src/shm/: mod.rs  nv.rs  shared.rs  worker.rs
src/sqlitedb/: mod.rs
src/ws/: client.rs  dipatcher.rs  dispatcher.rs  hub.rs  mod.rs
