[package]
name = "rust_server"
version = "0.1.0"
authors = ["elite"]

[dependencies]
log = "0.4"
chrono = "0.4.6"
grpc = "0.6"
timer = "0.2"
mrj = {path = "mrj", version = "0.1.0"}

[dependencies.websocket]
git = "https://github.com/websockets-rs/rust-websocket.git"

[dependencies.fern]
git = "https://github.com/daboross/fern.git"
