[package]
name = "rust_server"
version = "0.1.0"
authors = ["elite"]

[dependencies]
log = "0.4"
chrono = "0.4.6"
nix = "0.6.0"
timer = "0.2"
mrj-sys = {path = "mrj-sys", version = "0.1.0"}
mcsql-sys = {path = "mcsql-sys", version = "0.1.0"}
jsonrpc-tcp-server = { git = "https://github.com/paritytech/jsonrpc" }
serde = "1.0"
serde_derive = "1.0"

[dependencies.websocket]
git = "https://github.com/websockets-rs/rust-websocket.git"

[dependencies.fern]
git = "https://github.com/daboross/fern.git"

[target.'cfg(unix)'.dependencies]
signal = "0.2"

[profile.dev]
opt-level = 0      # controls the `--opt-level` the compiler builds with.
                   # 0-1 is good for debugging. 2 is well-optimized. Max is 3.
                   # 's' attempts to reduce size, 'z' reduces size even more.
debug = true       # (u32 or bool) Include debug information (debug symbols).
                   # Equivalent to `-C debuginfo=2` compiler flag.
rpath = false      # controls whether compiler should set loader paths.
                   # If true, passes `-C rpath` flag to the compiler.
lto = false        # Link Time Optimization usually reduces size of binaries
                   # and static libraries. Increases compilation time.
                   # If true, passes `-C lto` flag to the compiler, and if a
                   # string is specified like 'thin' then `-C lto=thin` will
                   # be passed.
debug-assertions = true # controls whether debug assertions are enabled
                   # (e.g. debug_assert!() and arithmetic overflow checks)
codegen-units = 16 # if > 1 enables parallel code generation which improves
                   # compile times, but prevents some optimizations.
                   # Passes `-C codegen-units`.
panic = 'unwind'   # panic strategy (`-C panic=...`), can also be 'abort'
incremental = true # whether or not incremental compilation is enabled
overflow-checks = true # use overflow checks for integer arithmetic.
                   # Passes the `-C overflow-checks=...` flag to the compiler.

# The release profile, used for `cargo build --release`.
[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 16
panic = 'unwind'
incremental = false
overflow-checks = false